[package]
name = "justid-toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
notify = { version = "8.0.0" }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0.140" }
tower = { version = "0.5.2" }
http = { version = "1.3.1" }
async-trait = { version = "0.1.88" }
pin-project = { version = "1.1.10" }
